--- a/templates/login.html
+++ b/templates/login.html
@@ -77,8 +77,8 @@
             <div class="mb-3">
                 <label class="form-label">用户ID</label>
                 <input type="text" class="form-control" name="user_id" required autofocus
-                       placeholder="例如: U25010001">
-                <div class="form-text">系统分配的用户ID，请联系管理员获取</div>
+                       placeholder="例如: 2023010001">
+                <div class="form-text">您在注册时使用的ID</div>
             </div>
             <div class="mb-3">
                 <label class="form-label">密码</label>
@@ -88,7 +88,7 @@
         </form>
 
         <div class="text-center mt-3 text-muted">
-            <small>默认管理员账号: U25010001 / admin123</small>
+            <small>默认管理员账号: 2023010001 / admin123</small>
         </div>
 
         <!-- 注册链接和忘记密码 -->
