2025/12/28 19:22 实现了备份和恢复

--- a/templates/base.html
+++ b/templates/base.html
@@ -469,6 +469,10 @@
                 <i class="bi bi-speedometer2"></i>
                 <span class="text">系统状态</span>
             </a>
+            <a class="nav-link" href="{{ url_for('backup_management') }}">
+                <i class="bi bi-database-fill"></i>
+                <span class="text">数据库备份</span>
+            </a>
             {% endif %}
         </nav>
     </div>
