2025/12/28 21:35备份，再也不添加功能了

--- a/templates/base.html
+++ b/templates/base.html
@@ -473,6 +473,10 @@
                 <i class="bi bi-database-fill"></i>
                 <span class="text">数据库备份</span>
             </a>
+            <a class="nav-link" href="{{ url_for('auto_backup_management') }}">
+                <i class="bi bi-clock-history"></i>
+                <span class="text">自动备份</span>
+            </a>
             {% endif %}
         </nav>
     </div>
